commit before adding support for web images

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Lib/GMGridView"]
 	path = Lib/GMGridView
 	url = git://github.com/gmoledina/GMGridView.git
+[submodule "Lib/NSURLConnection-Blocks"]
+	path = Lib/NSURLConnection-Blocks
+	url = git://github.com/rickerbh/NSURLConnection-Blocks.git
