working full view, updated example. circular progress still not working for full view and not added in thumb view

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "Lib/GMGridView"]
 	path = Lib/GMGridView
 	url = git://github.com/gmoledina/GMGridView.git
-[submodule "Lib/NSURLConnection-Blocks"]
-	path = Lib/NSURLConnection-Blocks
-	url = git://github.com/rickerbh/NSURLConnection-Blocks.git
+[submodule "Lib/DACircularProgres"]
+	path = Lib/DACircularProgres
+	url = git://github.com/danielamitay/DACircularProgress.git
