added iPhoneMK submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Lib/GMGridView"]
 	path = Lib/GMGridView
 	url = git://github.com/gmoledina/GMGridView.git
+[submodule "Lib/iPhoneMK"]
+	path = Lib/iPhoneMK
+	url = git://github.com/michaelkamprath/iPhoneMK.git
